--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<h3>current State</h3>
 					<ul>
 						<li>read and write memory from ARM cores</li>
-						<li>support for ST-Link v2(v3 soon?) & CMSIS-DAP</li>
+						<li>support for ST-Link v2/v3 & CMSIS-DAP</li>
 						<li>can halt, step and bp the connected core M0 or M4</li>
 						<li>can flash a binary on to a specific set of MCUS</li>
 						<li>vscode plugin to show stacktrace and variables</li>
